noinst_LTLIBRARIES = libossfs.la

libossfs_la_SOURCES = 

libossfs_la_LIBADD = codec/libcodec.la  \
					 digest/libdigest.la  \
					 fs/libfs.la  \
					 http/libhttp.la  \
					 log/liblog.la  \
					 net/libnet.la  \
					 oss/liboss.la  \
					 sys/libsys.la  \
					 util/libutil.la  \
					 xml/libxml.la

SUBDIRS = codec digest fs http log net oss sys util xml
